--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-LOCALHOST_URL=http://localhost:3000
+LOCALHOST_URL=https://pdf-dehyari.vercel.app
 PASSWORD_COOKI=YvAbguq8tdjdmyNwYWmdtBocPxKFpQr4
 AUTH_TOKEN=6LfvH-YZAAAAAMSSiVglqs0tE0mXr1sIdFgScwM-
